Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -108,7 +108,6 @@ footer.bk-footer {
         z-index:1;
         .clearfix;
         ul {
-            float: right;
             margin: 20px 0;
             @media @tablet {
                 margin: 0;
